--- a/css/mvvm.css
+++ b/css/mvvm.css
@@ -16,7 +16,7 @@ body {
     z-index: -1;
     opacity: .3; }
   body .wrap {
-    display: block;
+    display: inline-block;
     width: 500px;
     margin: auto;
     margin-top: 100px; }
